<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ProfileActivity">

    <ScrollView
        android:id="@+id/profile_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="519dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_profile_change_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="true"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_profile_pic" />

            <TextView
                android:id="@+id/register_sign_up3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/register_sign_up4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/change_password"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.224"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_profile_update" />

            <Button
                android:id="@+id/btn_profile_update"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:enabled="false"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_profile_email" />

            <Button
                android:id="@+id/btn_profile_change_password"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_profile_password_confirm"
                tools:text="@string/change_password" />

            <EditText
                android:id="@+id/txt_profile_email"
                android:layout_width="300dp"
                android:layout_height="48dp"

                android:layout_marginTop="14dp"

                android:background="@drawable/rounded_input_background"
                android:ems="10"
                android:hint="@string/lbl_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_profile_username" />

            <ImageView
                android:id="@+id/img_profile_pic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_sign_up3"
                app:srcCompat="@drawable/profile_icon" />

            <EditText
                android:id="@+id/txt_profile_username"
                android:layout_width="300dp"
                android:layout_height="48dp"

                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_input_background"

                android:ems="10"
                android:hint="@string/lbl_username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingHorizontal="5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_profile_change_pic" />

            <EditText
                android:id="@+id/txt_profile_password_old"
                android:layout_width="300dp"
                android:layout_height="48dp"

                android:layout_marginTop="28dp"

                android:background="@drawable/rounded_input_background"
                android:ems="10"
                android:hint="@string/old_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingHorizontal="5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.456"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_sign_up4" />

            <EditText
                android:id="@+id/txt_profile_password_new"
                android:layout_width="300dp"
                android:layout_height="48dp"

                android:layout_marginTop="14dp"

                android:background="@drawable/rounded_input_background"
                android:ems="10"
                android:hint="@string/new_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingHorizontal="5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.456"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_profile_password_old" />

            <EditText
                android:id="@+id/txt_profile_password_confirm"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/rounded_input_background"

                android:ems="10"
                android:hint="@string/lbl_confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingHorizontal="5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.456"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_profile_password_new" />

            <ImageView
                android:id="@+id/logout_btn"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginEnd="28dp"
                app:layout_constraintBottom_toBottomOf="@+id/register_sign_up3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/register_sign_up3"
                app:layout_constraintVertical_bias="0.476"
                app:srcCompat="@drawable/logout_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/header_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_top_logo"
        tools:layout_editor_absoluteX="0dp" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/lpc_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="@+id/footer_profile"
        app:layout_constraintEnd_toEndOf="@+id/footer_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/playing_music_component" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/footer_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/fragment_bottom_navbar" />

</androidx.constraintlayout.widget.ConstraintLayout>